<resources>
    <string name="app_name">Huerto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_title">Add a title</string>
    <string name="add_description">Insert a description...</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="password2">Confirm your Password</string>
    <string name="mail">example@mail.com</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="select_date">Select date</string>

    <string name="seeds">Seeds</string>
    <string name="tools">Tools</string>
    <string name="flower_pot_soil">Flower pots / Soil</string>
    <string name="flower_pot">Flower pots</string>
    <string name="soil">Soil</string>
    <string name="books">Books</string>
    <string name="title_activity_element_1">Element_Activity1</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_element_tab_">ElementTab_Activity</string>
    <string name="title_activity_maps">Map</string>



</resources>
