<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSeeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seeds"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerSemilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewSeeds"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSoil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soil"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSemilla" />
    <Spinner
        android:id="@+id/spinnerMaceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewSoil"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMaceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flower_pot"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMaceta" />
    <Spinner
        android:id="@+id/spinnerTierra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaceta"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        app:layout_constraintTop_toBottomOf="@id/spinnerTierra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_create_event"
        android:src="@drawable/ic_add_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>