<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBackground">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/semillas_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/seeds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/herramientas_button"
        app:layout_constraintBottom_toTopOf="@id/macetas_button"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/sprout"
        app:layout_constraintBottom_toTopOf="@id/semillas_button"
        app:layout_constraintEnd_toEndOf="@id/semillas_button"
        >
    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toTopOf="@id/herramientas_button"
        app:layout_constraintStart_toStartOf="@id/herramientas_button"
        >
    </androidx.appcompat.widget.AppCompatImageView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/herramientas_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/tools"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toEndOf="@id/semillas_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tierra_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/book"
        app:layout_constraintBottom_toTopOf="@id/macetas_button"
        app:layout_constraintEnd_toEndOf="@id/macetas_button"
        >
    </androidx.appcompat.widget.AppCompatImageView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/macetas_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text= "@string/books"
        app:layout_constraintTop_toBottomOf="@id/semillas_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tierra_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/flower"
        app:layout_constraintBottom_toTopOf="@id/tierra_button"
        app:layout_constraintStart_toStartOf="@id/tierra_button"
        >
    </androidx.appcompat.widget.AppCompatImageView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tierra_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/flower_pot_soil"
        app:layout_constraintStart_toEndOf="@id/macetas_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/herramientas_button"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>